[gd_scene load_steps=2 format=3 uid="uid://cq8qrkly8lkpp"]

[ext_resource type="Script" uid="uid://de3mq2cc2iwrm" path="res://UI/ActionMenu.gd" id="1_eiu86"]

[node name="ActionMenu" type="Panel"]
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eiu86")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "行动菜单"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MoveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "移动"

[node name="SkillButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "技能"

[node name="ItemButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "道具"

[node name="SpecialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "特殊"

[node name="RestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "休息"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "取消"
